--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ ul li::before{
     height:28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(../unchecked1.png);
+    background-image: url(./unchecked1.png);
     background-size: cover;
     background-position: center;
     top:9px;
@@ -86,7 +86,7 @@ ul li.checked{
 
 }
 ul li.checked::before{
-    background-image: url(../unchecked.png);
+    background-image: url(./unchecked.png);
 }
 ul li span{
     position: absolute;
